# Email-Spam-Detection

./: README.md  app.py  model.py  my_model.pkl  my_vectorizer.pkl  pyproject.toml
