[project]
name = "email-spam-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gtts>=2.5.4",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pygame>=2.6.1",
    "pyperclip>=1.9.0",
    "scikit-learn>=1.6.1",
    "wheel>=0.45.1",
]
